2024-11-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c:
	  Fix printing of C23 nullptr in diagnostics.
	* sim/ucsim/src/sims/f8.src/ialu.cc,
	  src/f8/peeph.def:
	  Change f8 n flag semantics for 8-bit shifts. Fix some flag issues in f8 peephole optimizer rules.

2024-11-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asmain.c: applied patch #483 to use search path for
	  .incbin, thanks Michel Iwaniec,
	  also added some synchronization with ASxxxx v5.50

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/f8/peep.c,
	  src/f8/peeph.def,
	  src/f8/ralloc.c:
	  Various f8 improvements.

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCpeeph.c,
	  src/hc08/ralloc2.cc,
	  src/mos6502/ralloc2.cc,
	  src/pdk/ralloc2.cc,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc2.cc,
	  src/f8/ralloc2.cc:
	  Fix issues found via the infer linter.
	* src/f8/gen.c:
	  Fixes for f8 codegen/regalloc cost function.

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 struct/union parameter passing codegen.
	* src/SDCCcse.h,
	  src/SDCCsymt.c,
	  support/valdiag/tests/bug-3801.c:
	  Fix issues found via the sparse linter, including bug #3801.

2024-11-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peeph.def:
	  Improve z80 jump tables (RFE #941).

2024-11-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3799.c,
	  support/regression/tests/gcc-torture-execute-pr44575.c:
	  Fix bug #3799.

2024-11-20 Benedikt Freisen <b.freisen AT gmx.net>

	* support/regression/ports/ds390/uCsim.cmd,
	  support/regression/ports/ez80-z80/uCsim.cmd,
	  support/regression/ports/f8/uCsim.cmd,
	  support/regression/ports/hc08/uCsim.cmd,
	  support/regression/ports/mcs51-common/uCsim.cmd,
	  support/regression/ports/pdk13/uCsim.cmd,